--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "b6aea22c-c6e3-41b9-af70-da47d30cb1e6"
   },
   "newProjectRoot": "projects",
   "projects": {
