--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
               }
             ],
             "styles": [
+              "node_modules/material-symbols/outlined.css",
               "src/styles.scss"
             ]
           },
