--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,10 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "node_modules/material-symbols/outlined.css",
-              "src/styles.scss"
+            "styles": ["node_modules/material-symbols/outlined.css", "src/styles.scss"],
+            "scripts": [
+              "node_modules/@popperjs/core/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
@@ -48,7 +49,6 @@
                   "maximumWarning": "15kB",
                   "maximumError": "30kB"
                 }
-                
               ],
               "outputHashing": "all"
             },
