--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/forms": "^21.1.0",
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
     "material-symbols": "^0.40.2",
     "rxjs": "~7.8.0",
